--- a/about.html
+++ b/about.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <h1>Du an 3</h1>
-    <h2>Sửa lần 1</h2>
-    <h2>dsfs sdfsdsd</h2>
+    <h1>about</h1>
   </body>
 </html>
